<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ipo"
            android:icon="@drawable/ic_ipo"
            android:title="@string/ipo" />

        <item
            android:id="@+id/nav_buyback"
            android:icon="@drawable/ic_buyback"
            android:title="@string/buyback" />

        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="@string/bonus" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate_star_big_on"
                android:title="Rate and Comment" />

            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/title_feedback" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/information_outline"
                android:title="@string/title_about" />


        </menu>
    </item>

</menu>
