<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/primary_text" android:textStyle="bold"
            android:textColor="@color/PRIMARY_TEXT" android:layout_width="wrap_content"
            android:layout_height="fill_parent" android:text="@string/lbl_issue_size" />

        <TextView android:id="@+id/txt_issuesize" android:textSize="@dimen/secondary_text"
            android:textColor="@color/SECONDARY_TEXT" android:layout_width="wrap_content" android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/primary_text" android:textStyle="bold"
            android:textColor="@color/PRIMARY_TEXT" android:layout_width="wrap_content"
            android:layout_height="fill_parent" android:text="@string/lbl_issue_date" />

        <TextView android:id="@+id/txt_issuedate" android:textSize="@dimen/secondary_text"
            android:textColor="@color/SECONDARY_TEXT" android:layout_width="wrap_content" android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/primary_text" android:textStyle="bold"
            android:textColor="@color/PRIMARY_TEXT" android:layout_width="wrap_content"
            android:layout_height="fill_parent" android:text="@string/lbl_issue_price" />

        <TextView android:id="@+id/txt_issueprice" android:textSize="@dimen/secondary_text"
            android:textColor="@color/SECONDARY_TEXT" android:layout_width="wrap_content" android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/primary_text" android:textStyle="bold"
            android:textColor="@color/PRIMARY_TEXT" android:layout_width="wrap_content"
            android:layout_height="fill_parent" android:text="@string/lbl_facevalue" />

        <TextView android:id="@+id/txt_facevalue" android:textSize="@dimen/secondary_text"
            android:textColor="@color/SECONDARY_TEXT" android:layout_width="wrap_content" android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/primary_text" android:textStyle="bold"
            android:textColor="@color/PRIMARY_TEXT" android:layout_width="wrap_content"
            android:layout_height="fill_parent" android:text="@string/lbl_marketlot" />

        <TextView android:id="@+id/txt_marketlot" android:textSize="@dimen/secondary_text"
            android:textColor="@color/SECONDARY_TEXT" android:layout_width="wrap_content" android:layout_height="fill_parent" />
    </LinearLayout>

</LinearLayout>
